[project]
name = "sourcehack"
version = "0.1.0"
description = ""
authors = [
    {name = "Pedro Torruella",email = "5025399+ptorru@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "llama-index (>=0.12.19,<0.13.0)",
    "arize-phoenix (>=8.2.1,<9.0.0)",
    "llama-index-llms-openai (>=0.3.20,<0.4.0)",
    "llama-index-readers-file (>=0.4.5,<0.5.0)",
    "llama-index-embeddings-openai (>=0.3.1,<0.4.0)",
    "llama-index-llms-openai-like (>=0.3.3,<0.4.0)",
    "openinference-instrumentation-llama-index (>=2)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "streamlit (>=1.42.2,<2.0.0)",
    "streamlit-visgraph (>=0.2.3,<0.3.0)",
    "streamlit-d3graph (>=1.0.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
